third_party/blink/renderer/bindings/core/v8/v8_wasm_response_extensions.cc
@@ -160,6 +160,11 @@ void CompileFromResponseCallback(
     return;
   }
 
+  if (!response->ok()) {
+    exception_state.ThrowTypeError("HTTP status code is not ok");
+    return;
+  }
+
   if (response->MimeType() != "application/wasm") {
     exception_state.ThrowTypeError(
         "Incorrect response MIME type. Expected 'application/wasm'.");
