third_party/WebKit/LayoutTests/http/tests/wasm/resources/load-wasm.php
@@ -4,15 +4,7 @@
     if (isset($_GET['name'])) {
        $fileName = $_GET['name'];
     }
-    $fileSize = filesize($fileName);
 
-    header("Content-Type: " . "application/wasm");
-
-    $fn = fopen($fileName, "rb");
-    $buffer = fread($fn, $fileSize);
-    print($buffer);
-    flush();
-    fclose($fn);
-
-    exit;
+    header("Content-Type: application/wasm");
+    require($fileName);
 ?>
